--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -49,15 +49,7 @@ http {
         ssl_certificate_key /etc/nginx/certs/riabanerjee.key;
         ssl_trusted_certificate /etc/nginx/certs/riabanerjee_dev.ca-bundle;
 
-        # SSL Parameters
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
-        ssl_prefer_server_ciphers on;
-
-        # SSL settings to secure the connection
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 1d;
-        ssl_session_tickets off;
+        
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         
         root /usr/share/nginx/html;
@@ -73,40 +65,11 @@ http {
             add_header Cache-Control "public, max-age=2592000";
         }
 
-        # # Handle 404 Errors
-        # error_page 404 /404.html;
-        # location = /404.html {
-        #     root /usr/share/nginx/html;
-        # }
-
-        # # Handle 500, 502, 503, 504 Errors
-        # error_page 500 502 503 504 /50x.html;
-        # location = /50x.html {
-        #     root /usr/share/nginx/html;
-        # }
-
-
-        # location = /api/send-email {
-        #     # Apply the specific rate limit
-        #     limit_req zone=send_email_limit burst=20 nodelay;
-
-        #     # Reverse proxy to Flask backend
-        #     proxy_pass http://52.204.124.94:5000/;
-        #     # proxy_pass http://localhost:5000/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
-
-
-
         # Reverse Proxy to Flask Backend
         location /api/ {     
         limit_req zone=global_limit burst=10 nodelay;
 
-        proxy_pass http://52.204.124.94:5000/;
-        # proxy_pass http://localhost:5000/;
+        proxy_pass http://riabanerjee.dev:5000/;        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
